fix: make menu overflow the main image

--- a/assets/sass/first_restaurant.scss
+++ b/assets/sass/first_restaurant.scss
@@ -57,8 +57,7 @@ $icon-color-dark: #353535;
 
 .main-photo img {
     width: 100%;
-    height: 275px;
-    box-sizing: border-box;
+    
 }
 
 
@@ -68,10 +67,12 @@ $icon-color-dark: #353535;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
     background: $background-color;
     box-sizing: border-box;
+    position: relative;
+    top: -50px;
     
     
 
@@ -80,7 +81,7 @@ $icon-color-dark: #353535;
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        padding: 32px 0 0 15px;
+        padding: 25px 0 0 15px;
         gap: 35px;
         box-sizing: border-box;
 
@@ -98,6 +99,7 @@ $icon-color-dark: #353535;
     h1 {
         font-size: 28px;
         font-family: Shrikhand;
+        font-weight: 400;
     }
 
 }
@@ -107,7 +109,7 @@ $icon-color-dark: #353535;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    margin: 40px 0 10px 0;
+    margin: 30px 0 10px 0;
     
 }
 &__subtitle {
@@ -130,7 +132,7 @@ $icon-color-dark: #353535;
 }
 
 &__card {
-    width: 95%;
+    width: 94%;
     height: 69px;
     display: flex;
     align-items: center;
